--- a/html/AndroidUsers.html
+++ b/html/AndroidUsers.html
@@ -186,7 +186,9 @@
                 
 <p></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">To run Material in full screen app mode first open it in your default browser - </span><span class="rvts6">http://lmsipaddress:9000/Material/Mobile</span></p>
+<p class="rvps2"><span class="rvts6">Recommended browser - Kiwi</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">To run Material skin in full screen app mode first open it in your default browser - </span><span class="rvts6">http://lmsipaddress:9000/Material/Mobile</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img width="540" height="1110" alt="" style="padding : 1px;" src="lib/Screenshot_20191104-141453_Chrome.jpg"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -200,7 +202,7 @@
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material skin is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
