--- a/html/GettingStarted.html
+++ b/html/GettingStarted.html
@@ -187,14 +187,14 @@
 <p></p>
 <p class="rvps2"><a class="rvts11" href="Systemrequirements.html"><br/></a></p>
 <p class="rvps2"><a class="rvts11" href="Systemrequirements.html">System Requirements</a></p>
-<p class="rvps2"><a class="rvts11" href="LaunchingMaterial.html">Launching Material</a></p>
+<p class="rvps2"><a class="rvts11" href="LaunchingMaterialskin.html">Launching Material</a></p>
 <p class="rvps2"><a class="rvts11" href="PluginSettings.html">Plugin Settings</a></p>
 <p></p>
 <p class="rvps5" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour">Easily create Qt Help files</a></p>
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material skin is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
