--- a/html/Introduction.html
+++ b/html/Introduction.html
@@ -186,9 +186,9 @@
                 
 <p></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Material Skin is a HTML5 WebApp for Mobile and Desktop devices to be used in conjunction with </span><a class="rvts11" href="LogitechMediaServer.html">Logitech Media Server</a><span class="rvts6">&nbsp;7.9.x</span></p>
+<p class="rvps2"><span class="rvts6">Material skin is an HTML5 WebApp for Mobile and Desktop devices to be used in conjunction with </span><a class="rvts11" href="LogitechMediaServer.html">Logitech Media Server</a><span class="rvts6">&nbsp;7.9.x</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Material is built and copyright by Craig Drummond (cpd73) using </span><a class="rvts11" href="https://vuetifyjs.com/en/" target="_blank">Vuetify</a></p>
+<p class="rvps2"><span class="rvts6">Material skin is built and copyright by Craig Drummond (cpd73) using </span><a class="rvts11" href="https://vuetifyjs.com/en/" target="_blank">Vuetify</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Documentation by </span><span class="rvts6">Jim Gooch</span><span class="rvts6">&nbsp;(d6jg) using </span><a class="rvts11" href="https://www.helpndoc.com/" target="_blank">HelpNDoc</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -198,7 +198,7 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Last modified - </span><span class="rvts6">05/11/2019 11:21</span><span class="rvts6">&nbsp;- based upon Material 1.1.2</span></p>
+<p class="rvps2"><span class="rvts6">Last modified - </span><span class="rvts6">02/12/2019 11:01</span><span class="rvts6">&nbsp;- based upon Material 1.2</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -213,7 +213,7 @@
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material skin is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
