--- a/html/MaterialSettings.html
+++ b/html/MaterialSettings.html
@@ -194,8 +194,8 @@
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts13">Important Note</span><span class="rvts6">.</span></p>
-<p class="rvps2"><span class="rvts6">All Material settings are browser / device specific and are stored locally on your device</span></p>
-<p class="rvps2"><span class="rvts6">If Material is updated then you may need to clear your browser's cache to pick up changes</span></p>
+<p class="rvps2"><span class="rvts6">All Material skin settings are browser / device specific and are stored locally on your device</span></p>
+<p class="rvps2"><span class="rvts6">If Material skin is updated then you may need to clear your browser's cache to pick up changes</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem20.png"></p>
@@ -209,38 +209,38 @@
 <li value="5" class="rvps2"><span class="rvts6">Determines the level of volume change when you move the volume slider.</span></li>
 <li value="6" class="rvps2"><span class="rvts6">Keyboard shortcuts</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem24.png"></li>
 </ol>
-<p class="rvps6"><span class="rvts6">Click ? to view a list of available keyboard shortcuts</span><br/><span class="rvts6">Alt+▲ • Increase volume</span></p>
-<p class="rvps6"><span class="rvts6">Alt+▼ • Decrease volume</span></p>
-<p class="rvps6"><span class="rvts6">Alt+&lt; • Previous track</span></p>
-<p class="rvps6"><span class="rvts6">Alt+&gt; • Next track</span></p>
-<p class="rvps6"><span class="rvts6">Spacebar • Play/pause</span></p>
-<p class="rvps6"><span class="rvts6">Home • Go to homescreen</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+&lt; • Go back</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+F • Search</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+Shift+P • Play now</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+Shift+A • Append to queue</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+Shift+C • Add favorite, podcast, or preset</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+Shift+M • Create folder</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+D • Show current track information</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+Shift+E • Expand now playing</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+S • Save queue</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+X • Clear queue</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+M • Move queue to another player</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+U • Add URL to queue</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+T • Scroll queue to current track</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+G • Settings</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+P • Player settings</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+E • Server settings</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+I • Information</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+A • Manage players</span></p>
-<p class="rvps6"><span class="rvts6">Ctrl+B • Synchronise</span></p>
-<p class="rvps6"><span class="rvts6">Alt+N • Switch to Nth player</span><br/><span class="rvts6"><br/></span></p>
-<p class="rvps6"><span class="rvts6">Enabled / Disabled</span></p>
-<p class="rvps6"><img alt="" style="padding : 1px;" src="lib/NewItem22.png"><span class="rvts6">&nbsp;</span><img alt="" style="padding : 1px;" src="lib/NewItem23.png"></p>
+<p class="rvps7"><span class="rvts6">Click ? to view a list of available keyboard shortcuts</span><br/><span class="rvts6">Alt+▲ • Increase volume</span></p>
+<p class="rvps7"><span class="rvts6">Alt+▼ • Decrease volume</span></p>
+<p class="rvps7"><span class="rvts6">Alt+&lt; • Previous track</span></p>
+<p class="rvps7"><span class="rvts6">Alt+&gt; • Next track</span></p>
+<p class="rvps7"><span class="rvts6">Spacebar • Play/pause</span></p>
+<p class="rvps7"><span class="rvts6">Home • Go to homescreen</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+&lt; • Go back</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+F • Search</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+Shift+P • Play now</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+Shift+A • Append to queue</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+Shift+C • Add favorite, podcast, or preset</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+Shift+M • Create folder</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+D • Show current track information</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+Shift+E • Expand now playing</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+S • Save queue</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+X • Clear queue</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+M • Move queue to another player</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+U • Add URL to queue</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+T • Scroll queue to current track</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+G • Settings</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+P • Player settings</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+E • Server settings</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+I • Information</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+A • Manage players</span></p>
+<p class="rvps7"><span class="rvts6">Ctrl+B • Synchronise</span></p>
+<p class="rvps7"><span class="rvts6">Alt+N • Switch to Nth player</span><br/><span class="rvts6"><br/></span></p>
+<p class="rvps7"><span class="rvts6">Enabled / Disabled</span></p>
+<p class="rvps7"><img alt="" style="padding : 1px;" src="lib/NewItem22.png"><span class="rvts6">&nbsp;</span><img alt="" style="padding : 1px;" src="lib/NewItem23.png"></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="7" class="rvps2"><span class="rvts6">Toggles display of icons on </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><br/><span class="rvts6">Enabled / Disabled</span></li>
 </ol>
-<p class="rvps6"><img alt="" style="padding : 1px;" src="lib/NewItem41.png"><img alt="" style="padding : 1px;" src="lib/NewItem42.png"></p>
+<p class="rvps7"><img alt="" style="padding : 1px;" src="lib/NewItem41.png"><img alt="" style="padding : 1px;" src="lib/NewItem42.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -290,7 +290,7 @@
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material skin is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
