--- a/html/context/14.html
+++ b/html/context/14.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Using Material"</title>
-    <link rel="canonical" href="../UsingMaterial.html" />
+    <title>Redirecting to "Using Material skin"</title>
+    <link rel="canonical" href="../UsingMaterialskin.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../UsingMaterial.html" />
+    <meta http-equiv="refresh" content="0; url=../UsingMaterialskin.html" />
 </head>
 
 </html>
