--- a/html/context/5.html
+++ b/html/context/5.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Music &amp; Artist Information"</title>
-    <link rel="canonical" href="../MusicArtistInformation.html" />
+    <title>Redirecting to "Long Press"</title>
+    <link rel="canonical" href="../LongPress.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../MusicArtistInformation.html" />
+    <meta http-equiv="refresh" content="0; url=../LongPress.html" />
 </head>
 
 </html>
