--- a/html/context/6.html
+++ b/html/context/6.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Launching Material"</title>
-    <link rel="canonical" href="../LaunchingMaterial.html" />
+    <title>Redirecting to "Launching Material skin"</title>
+    <link rel="canonical" href="../LaunchingMaterialskin.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../LaunchingMaterial.html" />
+    <meta http-equiv="refresh" content="0; url=../LaunchingMaterialskin.html" />
 </head>
 
 </html>
