--- a/html/Pinning.html
+++ b/html/Pinning.html
@@ -170,7 +170,7 @@
             
                 <div class="navigation">
                     <ol class="breadcrumb">
-                        <li><a href="UsingMaterial.html">Using Material</a></li><li><a href="HomeScreen.html">Home Screen</a></li>
+                        <li><a href="UsingMaterialskin.html">Using Material skin</a></li><li><a href="HomeScreen.html">Home Screen</a></li>
                     </ol>
                     <div class="nav-arrows">
                         <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="HomeScreen.html" title="Home Screen" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="HomeScreen.html" title="Home Screen" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="BrowseArea.html" title="Browse Area" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
@@ -220,7 +220,7 @@
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material skin is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
