--- a/html/ContextMenu.html
+++ b/html/ContextMenu.html
@@ -220,7 +220,7 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><a name="Select"></a>
-<span class="rvts6">Select</span></p>
+<span class="rvts13">Select</span><span class="rvts6">&nbsp;- see also </span><a class="rvts11" href="SelectMultipleitems.html">Select Multiple Items</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem69.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -246,7 +246,7 @@
 <li value="8" class="rvps2"><span class="rvts6">Context Menu for Year - acts on all tracks tagged with Year</span></li>
 <li value="9" class="rvps2"><span class="rvts6">Artist Information - only available if </span><span class="rvts6">Music &amp; Artist Information plugin (MAI)</span><span class="rvts6">&nbsp;installed</span></li>
 <li value="10" class="rvps2"><span class="rvts6">Album Information &nbsp;- only available if </span><span class="rvts6">Music &amp; Artist Information plugin (MAI)</span><span class="rvts6">&nbsp;installed</span></li>
-<li value="11" class="rvps2"><span class="rvts6">Displays loacl artwork in </span><a class="rvts11" href="BrowseArea.html">Browse</a><span class="rvts6">&nbsp;area</span></li>
+<li value="11" class="rvps2"><span class="rvts6">Displays local artwork in </span><a class="rvts11" href="BrowseArea.html">Browse</a><span class="rvts6">&nbsp;area</span></li>
 </ol>
 <p></p>
 <p class="rvps5" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpauthoringsoftware.com">News and information about help authoring tools and software</a></p>
