--- a/html/LongPress.html
+++ b/html/LongPress.html
@@ -173,7 +173,7 @@
                         <li><a href="UsingMaterialskin.html">Using Material skin</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="UsingMaterialskin.html" title="Using Material skin" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="ExpandedNowPlayingArea.html" title="Expanded Now Playing Area" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="SongInformationArea.html" title="Song Information Area" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="UsingMaterialskin.html" title="Using Material skin" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="ExpandedNowPlayingArea.html" title="Expanded Now Playing Area" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="SelectMultipleitems.html" title="Select Multiple items" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
