--- a/html/context/31.html
+++ b/html/context/31.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Useful Tips"</title>
-    <link rel="canonical" href="../UsefulTips.html" />
+    <title>Redirecting to "Select Multiple items"</title>
+    <link rel="canonical" href="../SelectMultipleitems.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../UsefulTips.html" />
+    <meta http-equiv="refresh" content="0; url=../SelectMultipleitems.html" />
 </head>
 
 </html>
