--- a/html/UsingMaterialskin.html
+++ b/html/UsingMaterialskin.html
@@ -194,6 +194,8 @@
 <p class="rvps2"><a class="rvts11" href="QueueArea.html">Queue Area</a></p>
 <p class="rvps2"><a class="rvts11" href="NowPlayingArea.html">Now Playing Area</a></p>
 <p class="rvps2"><a class="rvts11" href="ExpandedNowPlayingArea.html">Expanded Now Playing Area</a></p>
+<p class="rvps2"><a class="rvts11" href="LongPress.html">Long Press</a></p>
+<p class="rvps2"><a class="rvts11" href="SelectMultipleitems.html">Select Multiple Items</a></p>
 <p class="rvps2"><a class="rvts11" href="SongInformationArea.html">Song Information Area</a><span class="rvts6">&nbsp;- only available if </span><span class="rvts6">Music &amp; Artist Information plugin (MAI)</span><span class="rvts6">&nbsp;is installed</span></p>
 <p></p>
 <p class="rvps5" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/feature-tour">Easily create PDF Help documents</a></p>
